samples/_failures_safe/1761700953_5938d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49a7dadf.c: In function ‘tokenize’:
./samples/SAFE/__tmp_49a7dadf.c:159:46: error: missing terminating " character
  159 |         struct Token eof_token = {TOKEN_EOF, "
      |                                              ^
./samples/SAFE/__tmp_49a7dadf.c:159:16: error: expected expression at end of input
  159 |         struct Token eof_token = {TOKEN_EOF, "
      |                ^~~~~
./samples/SAFE/__tmp_49a7dadf.c:159:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49a7dadf.c:159:16: error: expected declaration or statement at end of input
